[tool.poetry]
name = "directed_steiner_tree"
version = "0.1.0"
description = ""
authors = ["Justin Vrana <justin.vrana@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.4"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
